--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.table {
+    @apply table-auto
+}
+
+.table th {
+    @apply px-6 py-4 bg-gray-50 font-medium text-gray-500 uppercase border leading-4 tracking-widest
+}
+
+.table tr {
+    @apply border
+}
+
+.table.td{
+    @apply px-5 py-4 whitespace-normal
+}
+
+
+
+/* form */
+.form-control {
+    @apply block rounded-sm shadow-sm bg-purple-50 w-full
+}
