--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,12 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+h1{
+    @apply text-4xl mb-3
+}
+
 .table {
     @apply table-auto
 }
 
 .table th {
-    @apply px-6 py-4 bg-gray-50 font-medium text-gray-500 uppercase border leading-4 tracking-widest
+    @apply px-20 py-4 bg-gray-50 font-medium text-gray-500 uppercase border leading-4 tracking-widest
 }
 
 .table tr {
@@ -23,4 +27,44 @@
 /* form */
 .form-control {
     @apply block rounded-sm shadow-sm bg-purple-50 w-full
+}
+
+label{
+    @apply mt-2 block
+}
+
+
+
+
+/* botones */
+
+.btn{
+    @apply border rounded px-3 py-2 text-white font-bold inline-block transition-all
+}
+
+.btn-danger{
+    @apply bg-red-600 hover:bg-red-800 border-red-600
+}
+
+.btn-success{
+    @apply bg-green-600 hover:bg-green-800 border-green-600
+}
+
+.btn-prymary{
+    @apply bg-blue-600 hover:bg-blue-800 border-blue-600
+}
+
+.btn-warning{
+    @apply bg-yellow-600 hover:bg-yellow-800 border-yellow-600
+}
+
+
+/* card */
+
+.card {
+    @apply p-6 rounded shadow-sm
+}
+
+.card-white{
+    @apply bg-white
 }
